--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
     "ipykernel>=6.29.5",
     "matplotlib>=3.10.0",
     "networkx>=3.4.2",
+    "nolds>=0.6.1",
     "numpy>=2.2.2",
     "pandas>=2.2.3",
     "pylians>=0.12",
