--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ debugpy==1.8.12
 decorator==5.1.1
 executing==2.2.0
 fonttools==4.55.8
+future==1.0.0
 h5py==3.12.1
 hdf5plugin==5.0.0
 igraph==0.11.6
@@ -20,6 +21,7 @@ matplotlib==3.10.0
 matplotlib-inline==0.1.7
 nest-asyncio==1.6.0
 networkx==3.4.2
+nolds==0.6.1
 numpy==2.2.2
 packaging==24.2
 pandas==2.2.3
